# TEC-Sensor-Monitor

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_continuous_aggregates.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  downtime_event.py  reading.py  sensor.py  site.py  user.py  workshop.py
backend/app/repositories/: reading_repository.py  readings_query_repository.py  sensor_repository.py  site_repository.py  user_repository.py  workshop_repository.py
backend/app/routers/: auth.py  ingest.py  readings.py  sensors.py  sites.py  workshops.py
backend/app/schemas/: auth.py  ingest.py  sensor.py  site.py
backend/app/services/: admin_bootstrap.py  auth_service.py  ingest_service.py  readings_service.py  sensor_service.py  site_service.py  workshop_service.py
backend/tests/: conftest.py  test_auth_roles.py  test_ingest.py  test_readings.py
docs/: device-integration.md
firmware/: platformio.ini
firmware/src/: ble_provisioning.cpp  ble_provisioning.h  ble_uuids.h  current_sensor.h  fake_current_sensor.cpp  main.cpp  telemetry.cpp  telemetry.h  wifi_manager.cpp  wifi_manager.h
frontend/: .metadata  pubspec.yaml
frontend/lib/: main.dart
frontend/linux/: CMakeLists.txt
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
infra/nginx/: .gitkeep
tools/: esp_simulator.py  seed_test_sensor.py
(+37 files in other folders)
