[project]
name = "tek-sensor-monitor-backend"
version = "0.1.0"
description = "Backend for TEC sensor monitoring system"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "pyjwt==2.10.1",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
